--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
                 <button type="submit" class="btn btn-default">Search</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=4bf692be17be943ffd63&redirect_uri=http://localhost:8080/callback&scope=user&state=1">Login</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Me <span class="caret"></span></a>
                     <ul class="dropdown-menu">
